Cosmetics and typos.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@190 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Adapt_check.tex
+++ b/trunk/Adapt_check.tex
@@ -1,7 +1,7 @@
-\section{Adapt\_check: The adaptative importance sampling monitor}
+\section{Adapt\_check: The adaptive importance sampling monitor}
 \label{s:adapt_check}
-\index{Monitors!Adaptative importance sampling monitor}
-\index{Sources!Adaptative importance sampling monitor}
+\index{Monitors!Adaptive importance sampling monitor}
+\index{Sources!Adaptive importance sampling monitor}
 \index{Optimization}
 
 \component{Adapt\_check}{K. Nielsen}{source\_comp}{}{validated}
