--- a/trunk/Source_adapt.tex
+++ b/trunk/Source_adapt.tex
@@ -2,7 +2,7 @@
 \label{s:Source_adapt}
 \label{s:source-adapt}
 \index{Optimization}
-\index{Sources!Adaptative source}
+\index{Sources!Adaptive source}
 
 \component{Source\_adapt}{K. Nielsen}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $E0$, $dE$, dist, $xw$, $yh$, $\Phi$}{$\alpha$, $\beta$ (plenty, default values are ok)}{partially validated}
 
