--- a/trunk/misc.tex
+++ b/trunk/misc.tex
@@ -37,7 +37,7 @@ status, but assumes the form of a component.
 
 \newpage
 \section{Progress\_bar: Simulation progress and automatic saving}
-\component{Progress\_bar}{System}{percent, flag\_save}{}{}
+\component{Progress\_bar}{System}{percent, flag\_save, profile}{}{}
 \label{s:progress-bar}
 \index{Simulation progress bar}
 
@@ -56,6 +56,8 @@ of the computation, and have also a trace of it in case of
 computer crash. The achieved percentage of the simulation is stored in these temporary
 data files. Technically, this save is equivalent to sending regularly
 a USR2 signal to the running simulation.
+
+The optional 'profile' parameter, when to a file name, will produce the number of statistical events reaching each component in the simulation. This may be used to identify positions where events are lost.
 
 \section{Beam\_spy: A beam analyzer}
 \component{Beam\_spy}{System}{}{}{should overlap previous component}
