--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -295,6 +295,30 @@ typical Unix-style command would be
 \begin{verbatim}
     cc -O -o name.out name.c -lm
 \end{verbatim}
+The \MCS\ team recommends these compiler alternatives for the Intel
+(and AMD) hardware architectures:
+\begin{itemize}
+\item[\bf A]{\verb+gcc+ which is a very portable, open source, ISO-C
+    compatible c compiler, available for most platforms. For Linux it
+    is usually part of your distribution, for Windows the \MCS\
+    distribution package includes a version of \verb+gcc+ 
+    (in the Dev-CPP sub-package), and for Mac OS X \verb+gcc+ is part
+    of the Xcode tools package available on the installation medium.}
+\item[\bf B]{\verb+icc+ or the Intel c compiler is available for Linux, Mac
+    OS and Windows systems and is a commercial software
+    product. Generally, simulations run with the Intel compiler are
+    {\bf a factor of 2 faster} than the identical simulation run using \verb+gcc+. To use \verb+icc+ with \MCS\, set the environment variables 
+    \begin{itemize}
+      \item{\verb+MCSTAS_CC=icc+}
+      \item{\verb+MCSTAS_CFLAGS="-g -O2 -wd177,266,1011,181"+}
+    \end{itemize}
+    To use \verb+icc+ with MPI (see Section \ref{s:run-mpi})
+ installations, it seems that \emph{editing}
+    the mpicc shell script and setting the CC variable to "\verb+icc+" is the
+    only requirement!}
+\end{itemize}
+
+
 The \verb+-O+ option typically enables the optimization phase of the compiler,
 which can make quite a difference in speed of \MCS\ generated simulations. The
 \verb+-o name.out+ sets the name of the generated executable. The \verb+-lm+
@@ -1723,3 +1747,8 @@ every node.
 Multi-threading is under experimentation. It has been implemented when using \\\verb+mcrun -c --threads=NB_CPU ...+.
 
 The method is based on a parallel execution of threads. This introduces quite large overhead and dramatically reduces efficiency. We thus do NOT recommand to use it. Further developments are under way.
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "manual"
+%%% End: 
